platform/infrastructure/networking/local/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: networking
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: steading-cluster.mshome.net
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              steading/gateway-access: public
        kinds:
          - kind: HTTPRoute
